--- a/scss/desktop/fkb-d-topic-list.scss
+++ b/scss/desktop/fkb-d-topic-list.scss
@@ -66,7 +66,7 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
     gap: var(--tds-space-xl);
     
     // Tablet & Mobile View (< 1100px) - grid collapses to 1 column
-    @media screen and (max-width: 0px) {
+    @media screen and (max-width: 767px) {
       grid-template-areas:
         "above-outlet"
         "alerts"
